--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -3,5 +3,6 @@ body {
   padding: 0;
   font-family: "Monoton", cursive;
   background-image: url("./images/sw-bg.jpg");
+  min-height: 100vh;
   background-size: cover;
 }
